examples/test/testpolicy2272.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2272
  namespace: namespace108
spec:
  podSelector:
    matchLabels:
      key39: value6
      key31: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value20
          key40: value15
          key22: value38
      podSelector:
        matchLabels:
          key41: value23
